# energy_aware_planner_ros2

./: README.md  run_demo.sh
src/energy_aware_planner/: CMakeLists.txt  package.xml  plugin_description.xml
src/energy_aware_planner/config/: energy_demo.rviz  nav2_params.yaml
src/energy_aware_planner/include/energy_aware_planner/: energy_aware_planner.hpp
src/energy_aware_planner/launch/: demo.launch.py
src/energy_aware_planner/maps/: complex_maze.pgm  complex_maze.yaml  generate_map.py  maze.yaml
src/energy_aware_planner/scripts/: backup.txt  battery_sim.py  fake_loc.py
src/energy_aware_planner/src/: energy_aware_planner.cpp
